@@ -1,3 +1,6 @@
+2006-11-07 Thorsten Kahler <thorsten.kahler@dkd.de>
+	* Optional tab-style menu
+	* Added some german translations to CSH
 
 2006-10-31 Martin Kutschker <martin.t.kutschker@blackbox.net>
 	* Show a compact info of direct mail in all commands of mode "direct mail"
